Validação do cadastro do usuário. Falta validação de email e sexo.

--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -49,6 +49,7 @@
             <AutoCompleteTextView
                 android:id="@+id/dataNasc"
                 android:layout_width="match_parent"
+                android:focusable="false"
                 android:layout_height="wrap_content"
                 android:hint="@string/data_nasc"
                 android:inputType="text"
@@ -131,7 +132,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:maxLines="1"
             android:textColor="@color/colorAccent" />
 
@@ -147,8 +148,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/senha"
+            android:maxLength="8"
             android:inputType="textPassword"
             android:maxLines="1"
+            android:textColor="@color/colorAccent" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
+
+        <AutoCompleteTextView
+            android:id="@+id/confirmarSenha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/confirmar_senha"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:maxLength="8"
             android:textColor="@color/colorAccent" />
 
     </android.support.design.widget.TextInputLayout>
