--- a/app/src/main/res/layout/card_view_list_produto.xml
+++ b/app/src/main/res/layout/card_view_list_produto.xml
@@ -10,36 +10,37 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvNomeProduto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textAlignment="center"
             android:layout_marginTop="20dp"
-            android:text="Nome Produto"/>
+            android:text="Nome Produto"
+            android:textAlignment="center" />
 
         <ImageView
+            android:id="@+id/imageFerramenta"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/mala"/>
+            android:src="@drawable/mala" />
 
         <TextView
             android:id="@+id/tvDescricao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="Descrição"/>
+            android:layout_marginTop="20dp"
+            android:text="Descrição"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
