--- a/app/src/main/res/layout/activity_cadastro_ferramenta.xml
+++ b/app/src/main/res/layout/activity_cadastro_ferramenta.xml
@@ -104,7 +104,22 @@
         android:id="@+id/foto"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="@drawable/ic_user"/>
+        android:src="@drawable/ic_photo"/>
+
+    <TextView
+        android:textSize="17dp"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/disponibilidade" />
+
+    <Spinner
+        android:id="@+id/spinnerDisponibilidade"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dialog">
+
+    </Spinner>
 
     <Button
         android:id="@+id/cadastrar"
